samples/_failures_safe/1761190689_52bea6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a751e479.c: In function ‘main’:
./samples/SAFE/__tmp_a751e479.c:121:38: error: unterminated argument list invoking macro "MATRIX_PRINT"
  121 |     MATRIX_PRINT(matrix1, rows1, cols
      |                                      ^
./samples/SAFE/__tmp_a751e479.c:121:5: error: ‘MATRIX_PRINT’ undeclared (first use in this function)
  121 |     MATRIX_PRINT(matrix1, rows1, cols
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_a751e479.c:121:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a751e479.c:121:17: error: expected ‘;’ at end of input
  121 |     MATRIX_PRINT(matrix1, rows1, cols
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a751e479.c:121:5: error: expected declaration or statement at end of input
  121 |     MATRIX_PRINT(matrix1, rows1, cols
      |     ^~~~~~~~~~~~
